--- a/testAjax/index.html
+++ b/testAjax/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      let formData = new FormData();
 
-	<p>Obtención de datos mediante Ajax</p>
-
-	<script>
-
-		var miInit = { 
-	               		headers: {'application' : 'Pitw0JUVDjhniP1hkh9J'}    
-	           		 }
-			
-		fetch('http://127.0.0.1:3000/places',miInit)
-
-			
-
-			.then(places=>{
-
-				places.json().then(console.log)
-			
-			}).catch(error=>{
-
-				console.log(error)
-			})
-	
-	</script>
-	
-</body>
+      formData.append('title', 'Lugar creado con AJAX');
+      fetch('http://localhost:3000/places',{
+        method: 'POST',
+        body:formData,
+        headers:{
+          'application': 'Pitw0JUVDjhniP1hkh9J',
+          'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVhODAxYzc0ZjY1Y2ZkMjk1YzIwMjMxMCIsImlhdCI6MTUxODk1MjMwMH0.9WAABdJd5GoIQmjG69yQwzxdcRTqEW_UlAF8q5HwIU4'
+        }
+      })
+        .then(response=>{
+          response.json().then(console.log);
+        },console.log);
+    </script>
+  </body>
 </html>
